--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,11 @@ html {
 body {
   padding: 0;
   margin: 0;
+  cursor: none;
+}
+
+body :hover {
+  cursor: none;
 }
 
 a {
@@ -17,6 +22,21 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.cursor {
+  pointer-events: none;
+}
+
+.cursor__ball {
+  position: fixed;
+  top: 0;
+  left: 0;
+  mix-blend-mode: difference;
+  z-index: 1000;
+}
+.cursor__ball circle {
+  fill: #f7f8fa;
 }
 
 @media (prefers-color-scheme: dark) {
