--- a/styles/accordion.module.css
+++ b/styles/accordion.module.css
@@ -8,8 +8,9 @@
   animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 
-.AccordionTrigger[data-state="open"] > .AccordionChevron {
-  transform: rotate(180deg);
+.AccordionHeader[data-state="open"] {
+  background-color: white;
+  color: black;
 }
 
 @keyframes slideDown {
